--- a/Index.html
+++ b/Index.html
@@ -116,8 +116,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos accusantium repellat blanditiis architecto explicabo atque.
                 </p>
                 <p class="contact">
-                    <i class="fa fa-whatsapp" aria-hidden="true"></i> 5512345677
+                    <i class="fa fa-phone" aria-hidden="true"></i> 5512345677
                 </p>
+                <br>
                 <p class="contact">
                     <i class="far fa-envelope" aria-hidden="true"></i> someMail@digitalia.com
                 </p>
@@ -128,6 +129,10 @@
         <div class="cube">
             <i class="fa fa-chevron-up" aria-hidden="true"></i>
         </div>
+
+        <a href="#" class="chat-whats">
+            <i class="fa fa-whatsapp icon-w" aria-hidden="true"></i>
+        </a>
 
         <!-- Footer -->
         <footer>
