Se agrego url de whatsapp

--- a/Index.html
+++ b/Index.html
@@ -130,7 +130,7 @@
             <i class="fa fa-chevron-up" aria-hidden="true"></i>
         </div>
 
-        <a href="#" class="chat-whats">
+        <a href="https://api.whatsapp.com/send?phone=0123456789&text=I'm%20interested%20in%20your%20services" target="_blank" class="chat-whats">
             <i class="fa fa-whatsapp icon-w" aria-hidden="true"></i>
         </a>
 
