Vista de Escritorio listo

--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
 
         <div class="separador"></div>
 
-        <div class="servicio-box">
+        <div class="servicio-box medio">
             <div class="service-info">
                 <h1 class="title-service">¿Lorem, ipsum dolor.?</h1>
                 <h2 class="subtitle-service">Lorem ipsum dolor sit.</h2>
