Evento de back to top (Listo)

--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,7 @@
 
 
         <!-- Servicios -->
-        <div class="servicio-box">
+        <div class="servicio-box" id="web-app">
             <div class="service-info">
                 <h1 class="title-service">¿Lorem, ipsum dolor.?</h1>
                 <h2 class="subtitle-service">Lorem ipsum dolor sit.</h2>
@@ -126,7 +126,7 @@
         </div>
 
 
-        <div class="cube">
+        <div class="cube oculto" id="up">
             <i class="fa fa-chevron-up" aria-hidden="true"></i>
         </div>
 
@@ -180,7 +180,9 @@
 
     </div>
 
+    <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/evtScroll.js"></script>
 </body>
 
 </html>
