Versión de maquetacion Finalizada(Contenido Dummy)

--- a/Index.html
+++ b/Index.html
@@ -24,11 +24,11 @@
             <div class="container__nav">
                 <nav id="nav">
                     <ul>
-                        <li><a href="#" class="select">Inicio</a></li>
-                        <li><a href="#">Web</a></li>
-                        <li><a href="#">Marketing</a></li>
-                        <li><a href="#">Consultoria</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="#" class="select" id="btn-inicio">Inicio</a></li>
+                        <li><a href="#" id="btn-web">Web</a></li>
+                        <li><a href="#" id="btn-marketing">Marketing</a></li>
+                        <li><a href="#" id="btn-consultor">Consultoria</a></li>
+                        <li><a href="#" id="btn-contacto">Contacto</a></li>
                     </ul>
                 </nav>
                 <div class="btn__menu" id="btn_menu"><i class="fas fa-bars"></i></div>
@@ -79,7 +79,7 @@
 
         <div class="separador"></div>
 
-        <div class="servicio-box medio">
+        <div class="servicio-box medio" id="marketing-d">
             <div class="service-info">
                 <h1 class="title-service">¿Lorem, ipsum dolor.?</h1>
                 <h2 class="subtitle-service">Lorem ipsum dolor sit.</h2>
@@ -94,7 +94,7 @@
 
         <div class="separador"></div>
 
-        <div class="servicio-box">
+        <div class="servicio-box" id="consultoria">
             <div class="service-info">
                 <h1 class="title-service">¿Lorem, ipsum dolor.?</h1>
                 <h2 class="subtitle-service">Lorem ipsum dolor sit.</h2>
@@ -109,7 +109,7 @@
 
         <div class="separador"></div>
 
-        <div class="servicio-box">
+        <div class="servicio-box" id="contact">
             <div class="service-info">
                 <h1 class="title-service">Contactanos:</h1>
                 <p class="text-service">
